<resources
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    tools:ignore="MissingTranslation">
    <string name="generic_ok">OK</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_help">Help</string>
    <string name="generic_undo">Undo</string>
    <string name="generic_save">Save</string>
    <string name="generic_set">Set</string>
    <string name="generic_create">Create</string>
    <string name="generic_delete">Delete</string>
    <string name="generic_retry">Retry</string>
    <string name="generic_go">Go</string>
    <string name="generic_manage_card">Manage</string>
    <string name="generic_enable">Enable</string>
    <string name="generic_show_more">Show more</string>
    <string name="generic_no">No</string>
    <string name="generic_yes">Yes</string>
    <string name="generic_skip">Skip</string>
    <string name="generic_show_details">Show details</string>
    <string name="generic_accept">Accept</string>
    <string name="generic_reject">Reject</string>
    <string name="generic_menu">Menu</string>
    <string name="generic_back">Back</string>
    <string name="generic_swipe_to_dismiss">Swipe to the side to remove this message</string>
    <string name="generic_runtime_permission_rejected">Permission rejected; You can manage permissions in the system settings</string>
    <string name="about_version">Version %s</string>
    <string name="about_contact_title">Support</string>
    <string name="about_contact_mail">
        https://timelimit.io/en/#support
        \nhttps://timelimit.io/en/configsuggestions/
    </string>
    <string name="about_full_version">Premium version</string>
    <string name="about_sal" translatable="false">Stay Awesome License</string>
    <string name="about_full_version_not_in_local_mode">
        The premium version is not available in the local mode.
        You can buy a stay awesome license.
    </string>
    <string name="about_full_version_expired">
        You did not buy the premium version or the premium version expired.
    </string>
    <string name="about_full_version_until">
        You have got the premium version until %s.
    </string>
    <string name="about_full_version_always">
        The server you are using does not limit the access to the features of the premium version.
    </string>
    <string name="about_full_version_tap_hint">
        Tap here to buy or extend the premium version.
    </string>
    <string name="about_sal_tap_hint">
        Tap here to buy a stay awesome license.
    </string>
    <string name="about_contained_software_title">contained Software</string>
    <string name="about_contained_software_text" translatable="false">
        Kotlin Standard Library
        (<a href="https://github.com/JetBrains/kotlin/blob/master/license/LICENSE.txt">Apache License, Version 2.0</a>)
        \nKotlin Coroutines
        (<a href="https://github.com/JetBrains/kotlin/blob/master/license/LICENSE.txt">Apache License, Version 2.0</a>)
        \nAndroid X
        (<a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>)
        \n<a href="https://github.com/google/accompanist">Google Accompanist</a>
        (<a href="https://github.com/google/accompanist/blob/main/LICENSE">Apache License, Version 2.0</a>)
        \nAndroid Navigation Component
        (<a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>)
        \nAndroid Room
        (<a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>)
        \nAndroid X Paging Library
        (<a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>)
        \nAndroid Work Manager
        (<a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>)
        \n<a href="https://github.com/JakeWharton/ThreeTenABP">Three Ten Android Backport</a>
        (<a href="https://github.com/JakeWharton/ThreeTenABP/blob/master/LICENSE.txt">Apache License, Version 2.0</a>)
        \n<a href="https://github.com/jeremyh/jBCrypt">JBcrypt</a>
        (<a href="https://github.com/jeremyh/jBCrypt/blob/master/LICENSE">ISC license</a>)
        \n<a href="https://github.com/KeepSafe/TapTargetView">TapTargetView</a>
        (<a href="https://github.com/KeepSafe/TapTargetView/blob/master/LICENSE">Apache License, Version 2.0</a>
        \n<a href="https://github.com/google/flexbox-layout">Flexbox Layout</a>
        (<a href="https://github.com/google/flexbox-layout/blob/master/LICENSE">Apache License, Version 2.0</a>)
        \nGoogle Play Billing Library (only in builds in the Play Store)
        (<a href="https://developer.android.com/google/play/billing/release-notes"> Android Software Development Kit License Agreement</a>)
        \n<a href="https://github.com/square/okhttp">OkHttp</a>
        (<a href="https://github.com/square/okhttp/blob/master/LICENSE.txt">Apache License, Version 2.0</a>)
        \n<a href="https://github.com/socketio/socket.io-client-java">Socket.io-Java-Client</a>
        (<a href="https://github.com/socketio/socket.io-client-java/blob/master/LICENSE">MIT License</a>)
        \n<a href="https://github.com/apache/commons-text">Apache Commons Text</a>
        (<a href="https://github.com/apache/commons-text/blob/master/LICENSE.txt">Apache License, Version 2.0</a>)
        \n<a href="https://github.com/signalapp/curve25519-java">curve25519-java</a>
        (<a href="https://github.com/signalapp/curve25519-java/blob/master/LICENSE">GNU General Public License v3.0</a>)
        \n<a href="https://github.com/zxing/zxing">ZXing</a>
        (<a href="https://github.com/zxing/zxing/blob/master/LICENSE">Apache License 2.0</a>)
        \n<a href="https://github.com/square/wire/blob/master/README.md">Wire</a>
        (<a href="https://github.com/square/wire/blob/master/LICENSE.txt">Apache License 2.0</a>)
    </string>
    <string name="about_diagnose_title">Error diagnose</string>
    <string name="about_diagnose_text">Tap here to access details which help diagnosing errors</string>
    <string name="about_developer_key_title">Developer PGP-Key fingerprint</string>
    <string name="about_developer_key_text" translatable="false">2E5C 672D E893 055D 04F5 B7BC 36B4 49FB 5364 BDC4</string>
    <string name="about_source_title">Source code</string>
    <string name="about_source_text" translatable="false">
        <a href="https://codeberg.org/timelimit/timelimit-android">https://codeberg.org/timelimit/timelimit-android</a>
    </string>
    <string name="add_device">Add device</string>
    <string name="add_device_info">
        Enter or scan the code at the device which you would like to add.
        You can enter/scan the code ONLY during the setup of TimeLimit and only if you chose to link
        the device using a code. You can not use this code later - you must reinstall TimeLimit at
        the other device in this case.
    </string>
    <string name="add_device_success">The device %s was added</string>
    <string name="add_used_time_title">Add usage duration</string>
    <string name="add_used_time_title_with_category_title">Add usage duration for %s</string>
    <string name="add_used_time_description">This allows to add used time/ mark time as used
        in case it was used outside of TimeLimit, e.g. when you want to add telescreen usage
        to the used time
    </string>
    <string name="add_used_time_confirmation_toast">%1$s used time added for %2$s</string>
    <string name="add_user_title">Create user</string>
    <string name="add_user_hint_name">Name of the user</string>
    <string name="add_user_type_parent">Parent</string>
    <string name="add_user_type_child">Child</string>
    <string name="add_user_confirmation_done">User was created</string>
    <string name="add_user_child_password_info">If you chose a password for the child,
        then it can switch to its own user with its password.
        This feature is disabled if a child does not have a password.
    </string>
    <string name="add_user_authentication_required_text">
        Only parents may add users
    </string>
    <string name="add_user_authentication_required_btn">Authenticate</string>
    <string name="annoy_info">
        There was a manipulation of TimeLimit. Due to that, this device is locked now.
    </string>
    <string name="annoy_timer">
        The device can be unlocked in %s.
    </string>
    <string name="annoy_unlock_temp_button">Unlock for a moment</string>
    <string name="annoy_unlock_parent_button">Unlock a bit longer</string>
    <string name="annoy_reason">
        This was manipulated: %s
    </string>
    <string name="annoy_unlock_dialog_text">After unlocking, you should fix the cause for the blocking.
        Otherwise, the device will be locked again.
    </string>
    <string name="annoy_unlock_dialog_action">Unlock</string>
    <string name="authentication_action">Authenticate</string>
    <string name="authentication_required_overlay_title">Sign in to change settings</string>
    <string name="authentication_required_overlay_text">The settings will be locked again when you leave TimeLimit</string>
    <string name="authenticate_by_mail_text">
        To continue, you need an e-mail address to which you have got access
    </string>
    <string name="authenticate_by_mail_other_title">Sign in with a mail address</string>
    <string name="authenticate_by_mail_other_text">TimeLimit will send you a message with a code which you enter here to authenticate.</string>
    <string name="authenticate_by_mail_hardcoded_text">TimeLimit will send you a message to %s with a code which you enter here to authenticate.</string>
    <string name="authenticate_by_mail_message_sent">A code was sent to %s.</string>
    <string name="authenticate_by_mail_hint_mail">Mail address</string>
    <string name="authenticate_by_mail_hint_code">Received code</string>
    <string name="authenticate_by_mail_hint_general">
        If you signed up for TimeLimit 2019 or earlier using your Google account, then use
        the associated Google mail address instead.
        Always use the same mail address with the same spelling
        so that linking to other devices and purchases works.
    </string>
    <string name="authenticate_by_mail_snackbar_wrong_code">The entered code is invalid</string>
    <string name="diagnose_sync_copy_to_clipboard">Copy to clipboard</string>
    <string name="manage_disable_time_limits_title">Disable time limits</string>
    <string name="manage_disable_time_limits_info_enabled">Time limits are disabled until %s</string>
    <string name="manage_disable_time_limits_obsolete">This option is obsolete. Use the option at the categories.</string>
    <string name="manage_disable_time_limits_btn_enable">Enable time limits again</string>
    <string name="purchase_requires_auth_text">You have to authenticate for the purchase</string>
    <string name="purchase_token_explain">See https://timelimit.io/en/#how-to-purchase for details on the purchase.
        Your purchase token is:
    </string>
    <string name="purchase_required_info_local_mode_free">This feature is only available in the premium version and the local mode.</string>
    <string name="consent_app_list_sync_dialog_title">App List Synchronization</string>
    <string name="consent_app_list_sync_dialog_text">TimeLimit would like to sync the
        list of the installed Apps to make it possible to allow Apps remotely. For this,
        the list is saved at the TimeLimit server. This data is not used for any other purposes.
        Alternatively, you can use the local mode.
    </string>
    <string name="consent_app_list_sync_switch_label">Enable Synchronization</string>
    <string name="consent_app_list_sync_card_text">TimeLimit would like to sync the list of installed Apps for the remote control.</string>
</resources>